:sparkles: password feature
