# docs/swagger.json
@@ -18,6 +18,49 @@
                 "responses": {}
             }
         },
+        "/api/password": {
+            "post": {
+                "description": "This endpoint Create a new password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Password"
+                ],
+                "summary": "This endpoint Create a new password",
+                "parameters": [
+                    {
+                        "description": "Datos del usuario",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.PasswordCreateNoHash"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Usuario creado",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "Error de validación",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/user": {
             "get": {
                 "description": "This endpoint Get all users",
@@ -212,6 +255,23 @@
         }
     },
     "definitions": {
+        "models.PasswordCreateNoHash": {
+            "type": "object",
+            "properties": {
+                "expires_at": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "no_hashed_password": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -226,6 +286,9 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "status": {
                     "type": "string"
@@ -244,6 +307,9 @@
                 "phone": {
                     "type": "string"
                 },
+                "role_id": {
+                    "type": "integer"
+                },
                 "status": {
                     "type": "string"
                 }
@@ -260,6 +326,9 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "status": {
                     "type": "string"
