# src/infrastructure/api/routes/router.go
@@ -4,9 +4,15 @@ import "github.com/gin-gonic/gin"
 
 func Router(r *gin.RouterGroup) {
 	r.GET("/health-check", getHealthCheck)
+
+	// User routes
 	r.POST("/user", createUser)
 	r.GET("/user/:id", getUser)
 	r.PATCH("/user/:id", updateUser)
 	r.DELETE("/user/:id", deleteUser)
 	r.GET("/user", getAllUser)
+
+	// Password routes
+	r.POST("/password", createPassword)
+
 }
